docs-archive/apache-airflow-providers-mongo/2.2.0/_sources/_api/airflow/providers/mongo/sensors/mongo/index.rst.txt
:mod:`airflow.providers.mongo.sensors.mongo`
============================================

.. py:module:: airflow.providers.mongo.sensors.mongo


Module Contents
---------------

.. py:class:: MongoSensor(*, collection: str, query: dict, mongo_conn_id: str = 'mongo_default', mongo_db=None, **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a document which
   matches the given query in MongoDB. Example:

   >>> mongo_sensor = MongoSensor(collection="coll",
   ...                            query={"key": "value"},
   ...                            mongo_conn_id="mongo_default",
   ...                            task_id="mongo_sensor")

   :param collection: Target MongoDB collection.
   :type collection: str
   :param query: The query to find the target document.
   :type query: dict
   :param mongo_conn_id: The :ref:`Mongo connection id <howto/connection:mongo>` to use
       when connecting to MongoDB.
   :type mongo_conn_id: str

   .. attribute:: template_fields
      :annotation: = ['collection', 'query']

      

   
   .. method:: poke(self, context: dict)




