docs-archive/apache-airflow-providers-mongo/2.3.0/_sources/_api/airflow/providers/mongo/sensors/mongo/index.rst.txt
:py:mod:`airflow.providers.mongo.sensors.mongo`
===============================================

.. py:module:: airflow.providers.mongo.sensors.mongo


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.mongo.sensors.mongo.MongoSensor




.. py:class:: MongoSensor(*, collection: str, query: dict, mongo_conn_id: str = 'mongo_default', mongo_db=None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a document which
   matches the given query in MongoDB. Example:

   >>> mongo_sensor = MongoSensor(collection="coll",
   ...                            query={"key": "value"},
   ...                            mongo_conn_id="mongo_default",
   ...                            mongo_db="admin",
   ...                            task_id="mongo_sensor")

   :param collection: Target MongoDB collection.
   :type collection: str
   :param query: The query to find the target document.
   :type query: dict
   :param mongo_conn_id: The :ref:`Mongo connection id <howto/connection:mongo>` to use
       when connecting to MongoDB.
   :type mongo_conn_id: str
   :param mongo_db: Target MongoDB name.
   :type mongo_db: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['collection', 'query']

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



